<resources>
    <string name="app_name">오늘한주</string>
    <string name="app_name_space">오늘 한 주</string>
    <string name="loading">로딩중입니다...</string>
    <string name="send_data">데이터 전송중입니다.</string>
    <string name="network_error">네트워크 연결이 원활하지 않습니다.</string>
    <string name="not_implementation">준비중인 기능입니다.</string>
    <string name="confirm">확인</string>
    <string name="complete">완료</string>
    <string name="continued">다음</string>
    <string name="cancel">취소</string>
    <string name="app_version">현재 버전 1.0.0</string>
    <string name="default_notification_channel_id">default_notification_channel_id</string>
    <string name="ask_email">theplaydev2021@gmail.com</string>


    <!-- 회원가입 / 로그인 -->
    <string name="login_title">술꾼들이 만든 음주생활을 위한 공간\n\n오늘 한 주</string>
    <string name="login_join">참여하기</string>
    <string name="login_already">이미 계정이 있으신가요?</string>
    <string name="login_find">비밀번호 찾기</string>
    <string name="login_login">로그인 하기</string>
    <string name="login_login_normal">로그인</string>
    <string name="login_email_info">이메일을 입력해주세요</string>
    <string name="login_pw_hint">6자리 이상, 12자리 미만 비밀번호</string>
    <string name="login_pw_info">비밀번호를 입력해주세요</string>
    <string name="login_find_pw">비밀번호 찾기</string>
    <string name="find_pw_use_email">이메일로 비밀번호 찾기</string>
    <string name="find_pw_complete_info">임시 비밀번호를 메일로 전송하였습니다.\n\n임시 비밀번호로 로그인후\n설정에서 비밀번호 변경을진행해주세요.</string>
    <string name="sign_title">회원가입</string>
    <string name="sign_email_info">비밀번호 찾기를 우해 수신 가능한 이메일을 입력해주세요</string>
    <string name="sign_email_hint">이메일을 입력해주세요</string>
    <string name="sign_pw_hint">6자리 이상, 12자리 미만</string>
    <string name="sign_pw_info">6자리 이상, 12자리 미만의 비밀번호를 적어주세요</string>
    <string name="sign_pw_check_hint">비밀번호 확인</string>
    <string name="sign_nick_name_title">닉네임</string>
    <string name="sign_nick_name_info">직접 닉네임을 입력해주세요</string>
    <string name="sign_tos_check">개인정보 이용 동의(필수)</string>
    <string name="sign_complete">가입하기</string>
    <string name="sign_welcome">오늘 한 주로 입장해주세요</string>
    <string name="sign_pw_check_info">동일한 비밀번호를 적어주세요</string>

    <!-- main -->
    <string name="main_follow">팔로잉</string>
    <string name="add_comment">댓글 달기..</string>
    <string name="start_follow">팔로우를 시작합니다</string>
    <string name="delete_post_title">삭제하기</string>
    <string name="delete_post_content">해당 술자리를 삭제하시겠어요?</string>
    <string name="delete_post_delete">삭제</string>
    <string name="delete_post_no_delete">삭제 안 함</string>
    <string name="following_empty_title">팔로잉중인 유저가 없습니다\n\n마음에 드는 게시물을 팔로우 하면,\n내 친구들의 새로운 글을 모아볼 수 있어요 :)</string>

    <!-- search -->
    <string name="search_hing">술이나 레시피를 입력해주세요</string>

    <!-- recipe -->
    <string name="recipe_show_all">모두보기</string>
    <string name="recipe_title">인기 레시피</string>

    <!-- write -->
    <string name="write_title">새 게시물</string>
    <string name="write_write">글 작성하기</string>
    <string name="write_write_hint">문구 입력..</string>
    <string name="write_tag_hint">술 태그하기 : 오늘 함께한 술을 1개 이상 입력해주세요</string>
    <string name="write_tag_hint_exist">술 태그하기</string>
    <string name="write_drinks_name">술의 이름을 입력해주세요.</string>
    <string name="write_recipe_material">재료의 이름을 입력해주세요.</string>
    <string name="write_recipe_title">레시피 작성하기</string>
    <string name="write_recipe_tag_hint">재료 태그하기 : 나만의 레시피를 자유롭게 공유해주세요</string>
    <string name="write_recipe_content_hint">레시피 작성</string>
    <string name="write_recipe_tag_exist">재료 태그하기</string>
    <string name="write_recipe_info">오늘 제조한 술의 제조법을 설명해주세요</string>
    <string name="write_delete_tag">해당 술 태그를 삭제하시겠습니까?</string>
    <string name="write_delete_ingredient">해당 재료를 삭제하시겠습니까?</string>

    <!-- modify -->
    <string name="modify_title">게시물 수정</string>


    <!-- setting -->
    <string name="setting_profile">프로필 설정</string>
    <string name="setting_app">앱 설정</string>
    <string name="setting_p_1">개인정보 수정</string>
    <string name="setting_p_2">차단한 이용자</string>
    <string name="setting_p_3">로그아웃</string>
    <string name="setting_a_1">공지사항</string>
    <string name="setting_a_2">문의하기</string>
    <string name="setting_a_3">알림 설정</string>
    <string name="setting_a_4">계정 탈퇴</string>
    <string name="setting_a_5">오픈 소스 라이선스</string>
    <string name="setting_version_info">최신 버전을 사용 중입니다</string>
    <string name="setting_version">1.0.0</string>

    <!-- notice -->
    <string name="notice">공지사항</string>

    <!-- my page -->
    <string name="my_page_follow_delete">삭제하기</string>
    <string name="my_page_follow_delete_explain">님을\n팔로워에서 삭제하시겠습니까?</string>
    <string name="delete">삭제</string>
    <string name="no_delete">삭제 안 함</string>
    <string name="my_page_follow_ban">차단하기</string>
    <string name="my_page_follow_ban_explain">님을\n차단하시겠습니까?</string>
    <string name="my_page_follow_ban_explain_ex">차단된 사용자 목록은 설정에서 복원할 수 있습니다</string>
    <string name="delete_and_ban">삭제 및 차단</string>
    <string name="no_ban">차단 안 함</string>
    <string name="my_page_follow_cancel">팔로우 취소</string>
    <string name="my_page_follow_cancel_title">팔로우 취소하기</string>
    <string name="my_page_follow_cancel_explain">님을\n더 이상 팔로우하지 않겠습니까?</string>
    <string name="no_cancel">취소 안 함</string>

    <!-- setting profile -->
    <string name="setting_profile_nick_name">닉네임</string>
    <string name="setting_profile_id">아이디</string>
    <string name="setting_profile_edit">개인정보 수정</string>
    <string name="setting_profile_edit_nick_name">닉네임 변경하기</string>
    <string name="setting_profile_edit_pw">비밀번호 변경하기</string>
    <string name="setting_profile_edit_show_range">공개 범위 설정</string>
    <string name="edit_nick_name">닉네임 변경</string>
    <string name="edit_nick_name_hint">변경할 새로운 닉네임을 입력해주세요</string>
    <string name="edit_nick_name_change">변경</string>
    <string name="edit_pw">비밀번호 변경하기</string>
    <string name="edit_pw_origin">기존 비밀번호</string>
    <string name="edit_pw_new">새로운 비밀번호</string>
    <string name="edit_pw_check">비밀번호 확인</string>
    <string name="edit_pw_new_info">6자리 이상, 12자리 미만의 비밀번호</string>
    <string name="edit_pw_change">변경하기</string>

    <string name="edit_privacy">공개 범위 설정</string>
    <string name="edit_privacy_small_info">좋아요, 팔로워 수 및 나의 레시피</string>
    <string name="edit_privacy_big_info">계정 정보 비공개</string>

    <!-- logout -->
    <string name="logout_title">로그아웃</string>
    <string name="logout_content">우아한 보드카 계정에서\n로그아웃 하시겠어요?</string>
    <!-- quit -->
    <string name="quit_title">계정 탈퇴</string>
    <string name="quit_content">모든 정보를 지우고\n우아한 보드카 계정을 탈퇴하실건가요?</string>

    <!-- menu -->
    <string name="menu_save_recipe">레시피 저장</string>
    <string name="menu_follow">팔로우 하기</string>
    <string name="menu_share">공유하기</string>
    <string name="menu_report">신고하기</string>
    <string name="menu_delete">삭제하기</string>
    <string name="menu_modify">수정하기</string>
    <string name="menu_report_reason">이 게시물을 신고하는 이유</string>
    <string name="menu_report_spam">스팸</string>
    <string name="menu_report_19">선정적입니다</string>
    <string name="menu_report_not_match">부적절합니다</string>
    <string name="menu_report_cancel">취소하기</string>


</resources>