<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_dialog_body"
        android:minWidth="314dp"
        android:minHeight="356dp"
        android:padding="0dp">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/noto_sans_black"
            android:textSize="18dp"
            android:textColor="@color/colorWhite"
            android:text="@string/menu_report"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="49dp"/>

        <TextView
            android:id="@+id/tv_content"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/noto_sans_medium"
            android:textSize="15dp"
            android:textColor="@color/colorWhite"
            android:text="@string/menu_report_reason"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            android:layout_marginTop="32dp"/>
        <View
            android:id="@+id/line_gray"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/dividerGray"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_content"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/btn_spam"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/noto_sans_medium"
            android:gravity="center"
            android:textSize="15dp"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="13dp"
            android:paddingTop="10dp"
            android:paddingBottom="5dp"
            android:text="@string/menu_report_spam"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line_gray"/>
        <TextView
            android:id="@+id/btn_19"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/noto_sans_medium"
            android:gravity="center"
            android:textSize="15dp"
            android:layout_marginTop="5dp"
            android:paddingTop="10dp"
            android:paddingBottom="5dp"
            android:textColor="@color/colorWhite"
            android:text="@string/menu_report_19"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_spam"
            app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
            android:id="@+id/btn_not_match"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/noto_sans_medium"
            android:gravity="center"
            android:textSize="15dp"
            android:textColor="@color/colorWhite"
            android:text="@string/menu_report_not_match"
            android:layout_marginTop="5dp"
            android:paddingTop="10dp"
            android:paddingBottom="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_19"
            app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/noto_sans_medium"
            android:gravity="center"
            android:textSize="15dp"
            android:textColor="@color/mainForText"
            android:layout_marginTop="5dp"
            android:paddingTop="10dp"
            android:paddingBottom="5dp"
            android:text="@string/menu_report_cancel"
            app:layout_constraintTop_toBottomOf="@id/btn_not_match"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>