<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_dialog_body"
        android:minWidth="314dp"
        android:minHeight="233dp"
        android:padding="0dp">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/noto_sans_black"
            android:textSize="18dp"
            android:textColor="@color/colorWhite"
            android:text="@string/edit_nick_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="44dp"/>

        <EditText
            android:id="@+id/et_nick_name"
            android:gravity="center"
            android:textCursorDrawable="@drawable/cursor_color"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/noto_sans_medium"
            android:maxLines="1"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:textSize="15dp"
            android:backgroundTint="@color/colorWhite"
            android:hint="@string/edit_nick_name_hint"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite"
            android:layout_marginHorizontal="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            android:layout_marginTop="27dp"/>

        <TextView
            android:id="@+id/btn_left"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/noto_sans_medium"
            android:textSize="15dp"
            android:textColor="@color/colorWhite"
            android:text="@string/edit_nick_name_change"
            app:layout_constraintEnd_toStartOf="@id/iv_line"
            app:layout_constraintTop_toTopOf="@id/iv_line"
            app:layout_constraintBottom_toBottomOf="@id/iv_line"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="18dp"/>

        <ImageView
            android:id="@+id/iv_line"
            android:layout_width="6dp"
            android:layout_height="39dp"
            android:src="@drawable/line_dialog"
            app:layout_constraintTop_toBottomOf="@id/et_nick_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="24dp"/>

        <TextView
            android:id="@+id/btn_right"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/noto_sans_medium"
            android:textSize="15dp"
            android:textColor="@color/mainForText"
            android:text="@string/cancel"
            app:layout_constraintStart_toEndOf="@id/iv_line"
            app:layout_constraintTop_toTopOf="@id/iv_line"
            app:layout_constraintBottom_toBottomOf="@id/iv_line"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="18dp"/>





    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>