<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ctl_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/mainBlack">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/eland_nice_medium"
            android:textColor="@color/colorWhite"
            android:textSize="20dp"
            android:text="@string/sign_title"
            android:includeFontPadding="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="34.7dp"/>

        <TextView
            android:id="@+id/tv_email_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/noto_sans_medium"
            android:textColor="@color/subGray"
            android:textSize="10dp"
            android:text="@string/sign_email_info"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/ll_email_container"
            android:layout_marginStart="63dp"
            android:layout_marginBottom="7dp"
            android:gravity="center"
            android:visibility="invisible"/>


        <LinearLayout
            android:id="@+id/ll_email_container"
            android:layout_width="0dp"
            android:layout_height="62dp"
            android:layout_marginHorizontal="15dp"
            android:background="@drawable/custom_round_edittext_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            android:layout_marginTop="62dp"
            android:gravity="center_vertical">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/icon_email"
                android:scaleType="fitCenter"
                android:layout_marginStart="16dp"/>
            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textCursorDrawable="@drawable/cursor_color"
                android:background="@color/colorNull"
                android:backgroundTint="@color/colorNull"
                android:inputType="textEmailAddress"
                android:layout_marginStart="14dp"
                android:layout_marginEnd="14dp"
                android:fontFamily="@font/noto_sans_medium"
                android:textSize="15dp"
                android:hint="@string/sign_email_hint"
                android:includeFontPadding="false"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"/>
        </LinearLayout>


        <TextView
            android:id="@+id/tv_pw_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/noto_sans_medium"
            android:textColor="@color/subGray"
            android:textSize="10dp"
            android:text="@string/sign_pw_info"
            app:layout_constraintStart_toStartOf="@id/tv_email_info"
            app:layout_constraintBottom_toTopOf="@id/ll_pw_container"
            android:layout_marginBottom="7dp"
            android:gravity="center"
            android:visibility="invisible"/>

        <LinearLayout
            android:id="@+id/ll_pw_container"
            android:layout_width="0dp"
            android:layout_height="62dp"
            android:layout_marginHorizontal="15dp"
            android:background="@drawable/custom_round_edittext_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/ll_email_container"
            android:layout_marginTop="35dp"
            android:gravity="center_vertical">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/icon_password"
                android:scaleType="fitCenter"
                android:layout_marginStart="16dp"/>
            <EditText
                android:id="@+id/et_pw"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textCursorDrawable="@drawable/cursor_color"
                android:background="@color/colorNull"
                android:backgroundTint="@color/colorNull"
                android:inputType="textPassword"
                android:layout_marginStart="14dp"
                android:layout_marginEnd="14dp"
                android:fontFamily="@font/noto_sans_medium"
                android:textSize="15dp"
                android:hint="@string/sign_pw_hint"
                android:includeFontPadding="false"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"/>
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/icon_eye"
                android:scaleType="fitCenter"
                android:layout_marginEnd="15dp"/>
        </LinearLayout>


        <TextView
            android:id="@+id/tv_pw_check_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/noto_sans_medium"
            android:textColor="@color/subGray"
            android:textSize="10dp"
            android:text="@string/sign_pw_check_info"
            app:layout_constraintStart_toStartOf="@id/tv_email_info"
            app:layout_constraintBottom_toTopOf="@id/ll_pw_check_container"
            android:layout_marginBottom="7dp"
            android:gravity="center"
            android:visibility="invisible"/>
        <LinearLayout
            android:id="@+id/ll_pw_check_container"
            android:layout_width="0dp"
            android:layout_height="62dp"
            android:layout_marginHorizontal="15dp"
            android:background="@drawable/custom_round_edittext_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/ll_pw_container"
            android:layout_marginTop="35dp"
            android:gravity="center_vertical">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/icon_password"
                android:scaleType="fitCenter"
                android:layout_marginStart="16dp"/>
            <EditText
                android:id="@+id/et_pw_check"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textCursorDrawable="@drawable/cursor_color"
                android:background="@color/colorNull"
                android:backgroundTint="@color/colorNull"
                android:inputType="textPassword"
                android:layout_marginStart="14dp"
                android:layout_marginEnd="14dp"
                android:fontFamily="@font/noto_sans_medium"
                android:textSize="15dp"
                android:hint="@string/sign_pw_check_hint"
                android:includeFontPadding="false"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"/>
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/icon_eye"
                android:scaleType="fitCenter"
                android:layout_marginEnd="15dp"/>
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_continue"
            android:layout_width="0dp"
            android:layout_height="62dp"
            android:layout_marginHorizontal="15dp"
            android:background="@drawable/custom_round_button_default"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/eland_nice_medium"
            android:textSize="20dp"
            android:textColor="@color/subGray"
            android:text="@string/continued"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>